--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: foo
-        uses: ./../../actions/hello-world
+        uses: invisal/experiment-with-github-actions/actions/hello-world@master
+
         with:
           who-to-greet: "Mona the Octocat"
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
