--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
         shell: bash
 
   call-workflow-passing-data:
-    uses: ./.github/workflows/reuse.yml
+    uses: ./.github/workflows/reuse.yaml
     with:
       message: "Good night"
     secrets: inherit
