--- a/.github/workflows/reuse.yaml
+++ b/.github/workflows/reuse.yaml
@@ -16,6 +16,7 @@ jobs:
 
   triage2:
     runs-on: ubuntu-latest
+    needs: triage
     steps:
       - run: echo Hello ${{ inputs.message }}.
         shell: bash
