--- a/.github/workflows/reuse.yaml
+++ b/.github/workflows/reuse.yaml
@@ -8,16 +8,19 @@ on:
         type: string
 
 jobs:
-  triage:
+  Build:
     runs-on: ubuntu-latest
     steps:
       - run: echo Hello ${{ inputs.message }}.
         shell: bash
 
-  triage2:
+  Deployment:
     runs-on: ubuntu-latest
     needs: triage
-    environment: production
+    environment:
+      name: production
+      url: https://www.google.com
     steps:
       - run: echo Hello ${{ inputs.message }}.
-        shell: bash
+      - run: sleep 60
+      - run: sleep 100
