--- a/.github/workflows/reuse.yaml
+++ b/.github/workflows/reuse.yaml
@@ -16,7 +16,7 @@ jobs:
 
   Deployment:
     runs-on: ubuntu-latest
-    needs: triage
+    needs: Build
     environment:
       name: production
       url: https://www.google.com
