--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -8,7 +8,17 @@ on:
 
 jobs:
   file_changes:
+    runs-on: ubuntu-latest
     steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: "npm"
+
       - id: files
         uses: jitterbit/get-changed-files@v1
       - run: |
