--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -21,5 +21,5 @@ jobs:
 
       - id: files
         uses: jitterbit/get-changed-files@v1
-      - run: echo "${{ steps.files.outputs.all }}"" > change_files.txt
+      - run: echo "${{ steps.files.outputs.all }}" > change_files.txt
       - run: cat change_files.txt
