Remove the double quote

--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -23,5 +23,5 @@ jobs:
         uses: jitterbit/get-changed-files@v1
         with:
           format: "json"
-      - run: echo "${{ steps.files.outputs.all }}" > change_files.txt
+      - run: echo ${{ steps.files.outputs.all }} > change_files.txt
       - run: cat change_files.txt
