--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,12 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+      - environment: test
       - uses: actions/checkout@v3
       - id: foo
         uses: ./.github/hello-world
 
         with:
-          who-to-greet: "Mona the Octocat"
+          who-to-greet: { { secrets.MESSAGE } }
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
         shell: bash
 
