--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,9 +9,8 @@ jobs:
       - uses: actions/checkout@v3
       - id: foo
         uses: ./.github/hello-world
-
         with:
-          who-to-greet: { { secrets.MESSAGE } }
+          who-to-greet: ${{ secrets.MESSAGE }}
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
         shell: bash
 
