--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,8 +4,8 @@ jobs:
   hello_world_job:
     runs-on: ubuntu-latest
     name: A job to say hello
+    environment: test
     steps:
-      - environment: test
       - uses: actions/checkout@v3
       - id: foo
         uses: ./.github/hello-world
