--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,10 +1,25 @@
 on: [push]
 
 jobs:
+  plans:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # OR "2" -> To retrieve the preceding commit.
+
+      - name: Check if web changed
+        id: web
+        uses: tj-actions/changed-files@v35
+        with:
+          files: apps/web/**
+
   hello_world_job:
     runs-on: ubuntu-latest
     name: A job to say hello
+    needs: plans
     environment: test
+    if: needs.plans.web.outputs.any_changed == "true"
     steps:
       - uses: actions/checkout@v3
       - id: foo
