--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,7 +19,7 @@ jobs:
     name: A job to say hello
     needs: plans
     environment: test
-    if: needs.plans.web.outputs.any_changed == "true"
+    if: needs.plans.web.outputs.any_changed == 'true'
     steps:
       - uses: actions/checkout@v3
       - id: foo
