--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,7 +40,7 @@ jobs:
 
   hello_world_job2:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: A job to say hello 2
     needs: plans
     environment: test
     if: needs.plans.outputs.app == 'true'
